# feed-xml-mx

./: .gitignore  AUDIT_REPORT_2025.md  CLAUDE.md  LICENSE  README.md  error_handling.py  feed_processor.py  feed_processor_2025.py  feed_processor_v1_backup.py  feed_processor_v2.py  feed_validator.py  models.py  monitoring.py  mypy_ci.ini  product_scraper.py  product_scraper_enhanced.py  pyproject.toml  requirements.txt  requirements_2025.txt  requirements_dev.txt  ruff.toml  ruff_ci.toml  scraper_optimized.py  security.py  test_dependencies.py  test_feeds.py
.github/workflows/: feedxml-mx.yml  generate-feeds.yml  simple-feed-generator.yml
